# musical

./: README.md
client/: .gitignore  app.json  package-lock.json  package.json
client/app/: _layout.tsx  index.tsx
client/components/: Album.tsx  Library.tsx  PlayIcons.tsx  Player.tsx  Queue.tsx  QueueItem.tsx  ScrollingText.tsx  SearchBar.tsx  Track.tsx
client/contexts/: queue.tsx
client/types/: library.ts
server/: .gitignore  Cargo.toml  diesel.toml
server/migrations/2024-08-25-160308_create_audio/: down.sql  up.sql
server/src/: lib.rs  meta.rs  models.rs  schema.rs
server/src/api/: audio.rs
