[package]
name = "musical"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "srv"

[[bin]]
name = "initdb"

[dependencies]
tokio = { version = "*", features = ["full"] }
serde_json = "*"
dotenvy = "*"
axum = "*"
diesel = { version = "*", features = ["postgres"] }
symphonia = { version = "*", features = ["all"] }
