[package]
name = "musical"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "srv"

[[bin]]
name = "initdb"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dotenvy = "0.15.7"
http = "1.1.0"
axum = "0.7.6"
diesel = { version = "2.2.4", features = ["postgres"] }
symphonia = { version = "0.5.4", features = ["all"] }
